--- a/style.css
+++ b/style.css
@@ -30,22 +30,24 @@ body {
   font-weight: bold;
 }
 #choicesarea {
-  margin-top: 30px;
+  margin-top: 10px;
   width: 320px;
-  height: 120px;
+  height: 160px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 #choicesarea div {
   width: 100px;
-  height: 48px;
+  height: 75px;
   border-radius: 4px;
   border: 1px solid #000;
   font-weight: bold;
   text-align: center;
-  line-height: 48px;
+  line-height: 75px;
   cursor: pointer;
+  font-size: 18px;
+  background-color: #f3f3f3;
 }
 #result {
   position: absolute;
